--- a/Mathenian/Mathenian/Views/ArithmeticLessonPage.xaml
+++ b/Mathenian/Mathenian/Views/ArithmeticLessonPage.xaml
@@ -8,6 +8,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
@@ -15,19 +16,66 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <BoxView BackgroundColor="{Binding Colors[0]}"
+                     Grid.Row="0"
+                     Grid.Column="0"/>
+            <BoxView BackgroundColor="{Binding Colors[1]}"
+                     Grid.Row="0"
+                     Grid.Column="1"/>
+            <BoxView BackgroundColor="{Binding Colors[2]}"
+                     Grid.Row="0"
+                     Grid.Column="2"/>
+            <BoxView BackgroundColor="{Binding Colors[3]}"
+                     Grid.Row="0"
+                     Grid.Column="3"/>
+            <BoxView BackgroundColor="{Binding Colors[4]}"
+                     Grid.Row="0"
+                     Grid.Column="4"/>
+            <BoxView BackgroundColor="{Binding Colors[5]}"
+                     Grid.Row="0"
+                     Grid.Column="5"/>
+            <BoxView BackgroundColor="{Binding Colors[6]}"
+                     Grid.Row="0"
+                     Grid.Column="6"/>
+            <BoxView BackgroundColor="{Binding Colors[7]}"
+                     Grid.Row="0"
+                     Grid.Column="7"/>
+            <BoxView BackgroundColor="{Binding Colors[8]}"
+                     Grid.Row="0"
+                     Grid.Column="8"/>
+            <BoxView BackgroundColor="{Binding Colors[9]}"
+                     Grid.Row="0"
+                     Grid.Column="9"/>
+        </Grid>
         <Label Text="{Binding CurrentQuestion}"
                FontSize="Large"
-               Grid.Row="0"
+               Grid.Row="1"
                Grid.Column="0"/>
         <Editor Text="{Binding AnswerInput}"
                 AutoSize="TextChanges"
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="0"/>
         <Button x:Name="AnswerButton"
                 Text="Check"
                 Command="{Binding NavigateCommand}"
                 BackgroundColor="Green"
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.Column="0"/>
     </Grid>
 </ContentPage>
