--- a/Mathenian/Mathenian/Views/MainPage.xaml
+++ b/Mathenian/Mathenian/Views/MainPage.xaml
@@ -4,12 +4,149 @@
              x:Class="Mathenian.Views.MainPage"
              Title="{Binding Title}">
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand">
-        <Button Text="Arithmetic"
-                CornerRadius="40"
-                HeightRequest="80"
-                WidthRequest="80"
-                Command="{Binding NavigateCommand}"/>
-    </StackLayout>
-
+    <ScrollView>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40*"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
+            </Grid.ColumnDefinitions>
+            <BoxView Grid.Row="0"
+                     Grid.Column="2"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="2"
+                     Grid.Column="2"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="4"
+                     Grid.Column="1"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     Rotation="45"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="4"
+                     Grid.Column="3"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     Rotation="135"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="6"
+                     Grid.Column="0"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="6"
+                     Grid.Column="4"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="8"
+                     Grid.Column="0"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <BoxView Grid.Row="8"
+                     Grid.Column="4"
+                     Grid.RowSpan="3"
+                     HeightRequest="100"
+                     WidthRequest="1"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Center"
+                     BackgroundColor="LightGray"/>
+            <Button Text="Arithmetic"
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"
+                    Command="{Binding NavigateCommand}"/>
+            <Button Text="Algebra"
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Geometry"
+                    Grid.Row="4"
+                    Grid.Column="2"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Series"
+                    Grid.Row="6"
+                    Grid.Column="0"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Sets"
+                    Grid.Row="6"
+                    Grid.Column="4"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Differential"
+                    Grid.Row="8"
+                    Grid.Column="0"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Probability"
+                    Grid.Row="8"
+                    Grid.Column="4"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Integral"
+                    Grid.Row="10"
+                    Grid.Column="0"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+            <Button Text="Statistics"
+                    Grid.Row="10"
+                    Grid.Column="4"
+                    HeightRequest="60"
+                    WidthRequest="60"
+                    CornerRadius="30"/>
+        </Grid>
+    </ScrollView>
 </ContentPage>
