--- a/Mathenian/Mathenian/Views/ResultsPage.xaml
+++ b/Mathenian/Mathenian/Views/ResultsPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="Mathenian.Views.ArithmeticResultsPage"
+             x:Class="Mathenian.Views.ResultsPage"
              Title="{Binding Title}">
     <StackLayout HorizontalOptions="CenterAndExpand"
                  VerticalOptions="CenterAndExpand">
