--- a/Mathenian/Mathenian/Views/MainPage.xaml
+++ b/Mathenian/Mathenian/Views/MainPage.xaml
@@ -98,55 +98,64 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
-                    Command="{Binding NavigateCommand}"/>
+                    Command="{Binding NavigateCommand}"
+                    CommandParameter="Arithmetic"/>
             <Button Text="Algebra"
                     Grid.Row="2"
                     Grid.Column="2"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Algebra"/>
             <Button Text="Geometry"
                     Grid.Row="4"
                     Grid.Column="2"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Geometry"/>
             <Button Text="Series"
                     Grid.Row="6"
                     Grid.Column="0"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Series"/>
             <Button Text="Sets"
                     Grid.Row="6"
                     Grid.Column="4"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Sets"/>
             <Button Text="Differential"
                     Grid.Row="8"
                     Grid.Column="0"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Differential"/>
             <Button Text="Probability"
                     Grid.Row="8"
                     Grid.Column="4"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Probability"/>
             <Button Text="Integral"
                     Grid.Row="10"
                     Grid.Column="0"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Integral"/>
             <Button Text="Statistics"
                     Grid.Row="10"
                     Grid.Column="4"
                     HeightRequest="60"
                     WidthRequest="60"
-                    CornerRadius="30"/>
+                    CornerRadius="30"
+                    CommandParameter="Statistics"/>
         </Grid>
     </ScrollView>
 </ContentPage>
