--- a/Mathenian/Mathenian/Views/MainPage.xaml
+++ b/Mathenian/Mathenian/Views/MainPage.xaml
@@ -98,6 +98,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[0]}"
                     Command="{Binding NavigateCommand}"
                     CommandParameter="Arithmetic"/>
             <Button Text="Algebra"
@@ -106,6 +107,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[1]}"
                     CommandParameter="Algebra"/>
             <Button Text="Geometry"
                     Grid.Row="4"
@@ -113,6 +115,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[2]}"
                     CommandParameter="Geometry"/>
             <Button Text="Series"
                     Grid.Row="6"
@@ -120,6 +123,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[3]}"
                     CommandParameter="Series"/>
             <Button Text="Sets"
                     Grid.Row="6"
@@ -127,6 +131,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[6]}"
                     CommandParameter="Sets"/>
             <Button Text="Differential"
                     Grid.Row="8"
@@ -134,6 +139,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[4]}"
                     CommandParameter="Differential"/>
             <Button Text="Probability"
                     Grid.Row="8"
@@ -141,6 +147,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[7]}"
                     CommandParameter="Probability"/>
             <Button Text="Integral"
                     Grid.Row="10"
@@ -148,6 +155,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[5]}"
                     CommandParameter="Integral"/>
             <Button Text="Statistics"
                     Grid.Row="10"
@@ -155,6 +163,7 @@
                     HeightRequest="60"
                     WidthRequest="60"
                     CornerRadius="30"
+                    BackgroundColor="{Binding ButtonColors[8]}"
                     CommandParameter="Statistics"/>
         </Grid>
     </ScrollView>
