--- a/Mathenian/Mathenian/Views/MainPage.xaml
+++ b/Mathenian/Mathenian/Views/MainPage.xaml
@@ -8,7 +8,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
-                <RowDefinition Height="40*"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="60"/>
@@ -26,6 +26,10 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="60"/>
             </Grid.ColumnDefinitions>
+            <Button Text="Sign Out"
+                    Grid.Row="0"
+                    Grid.Column="4"
+                    Command="{Binding SignOutCommand}"/>
             <BoxView Grid.Row="0"
                      Grid.Column="2"
                      Grid.RowSpan="3"
