Implement initial dark mode

--- a/Mathenian/Mathenian/Views/ProfilePage.xaml
+++ b/Mathenian/Mathenian/Views/ProfilePage.xaml
@@ -4,26 +4,34 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="Mathenian.Views.ProfilePage">
-    <StackLayout>
+    <StackLayout BackgroundColor="{Binding Theme.BackgroundColor}">
         <Label Text="{Binding Username}"
                FontSize="Large"
+               TextColor="{Binding Theme.TextColor}"
                HorizontalTextAlignment="Center"/>
         <Label Text="Statistics:"
                FontSize="Medium"
+               TextColor="{Binding Theme.TextColor}"
                FontAttributes="Bold"/>
         <Label Text="{Binding TotalCorrectQuestions}"
-               FontSize="Medium"/>
+               FontSize="Medium"
+               TextColor="{Binding Theme.TextColor}"/>
         <Label Text="{Binding Accuracy}"
-               FontSize="Medium"/>
+               FontSize="Medium"
+               TextColor="{Binding Theme.TextColor}"/>
         <Label Text="{Binding DailyStreak}"
-               FontSize="Medium"/>
+               FontSize="Medium"
+               TextColor="{Binding Theme.TextColor}"/>
         <Label Text="Preferences:"
                FontSize="Medium"
+               TextColor="{Binding Theme.TextColor}"
                FontAttributes="Bold"/>
         <StackLayout Orientation="Horizontal">
             <Label Text="Dark Theme"
-                   FontSize="Medium"/>
-            <Switch IsToggled="{Binding IsDarkMode}"/>
+                   FontSize="Medium"
+                   TextColor="{Binding Theme.TextColor}"/>
+            <Switch IsToggled="{Binding IsDarkMode}"
+                    ThumbColor="DarkGray"/>
         </StackLayout>
         <Button Text="Back"
                 Command="{Binding NavigateCommand}"/>
