Finish dark mode implementation

--- a/Mathenian/Mathenian/Views/LessonPage.xaml
+++ b/Mathenian/Mathenian/Views/LessonPage.xaml
@@ -6,7 +6,7 @@
              x:Class="Mathenian.Views.LessonPage"
              Title="{Binding Title}">
 
-    <StackLayout>
+    <StackLayout BackgroundColor="{Binding Theme.BackgroundColor}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
@@ -58,6 +58,8 @@
                FontSize="Large"
                BackgroundColor="LightBlue"/>
         <Entry Text="{Binding AnswerInput}"
+               BackgroundColor="{Binding Theme.BackgroundColor}"
+               TextColor="{Binding Theme.TextColor}"
                ReturnCommand="{Binding NavigateCommand}"
                VerticalOptions="EndAndExpand"/>
         <Button Text="Check"
