--- a/Mathenian/Mathenian/Views/IntroductionPage.xaml
+++ b/Mathenian/Mathenian/Views/IntroductionPage.xaml
@@ -4,7 +4,7 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="Mathenian.Views.IntroductionPage">
-    <StackLayout>
+    <StackLayout BackgroundColor="{Binding Theme.BackgroundColor}">
         <Image Source="{Binding IntroImageSource}"/>
         <Button Text="Practice"
                 Command="{Binding LessonCommand}"/>
