--- a/Mathenian/Mathenian/Views/LessonPage.xaml
+++ b/Mathenian/Mathenian/Views/LessonPage.xaml
@@ -7,6 +7,17 @@
              Title="{Binding Title}">
 
     <StackLayout BackgroundColor="{Binding Theme.BackgroundColor}">
+        <StackLayout Orientation="Horizontal"
+                     HorizontalOptions="FillAndExpand">
+            <Label Text="{Binding Title}"
+                   FontSize="Small"
+                   TextColor="{Binding Theme.TextColor}"
+                   HorizontalOptions="StartAndExpand"/>
+            <Button Text="Quit"
+                    Command="{Binding QuitCommand}"
+                    WidthRequest="60"
+                    HorizontalOptions="End"/>
+        </StackLayout>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
