--- a/Mathenian/Mathenian/Views/TestPage.xaml
+++ b/Mathenian/Mathenian/Views/TestPage.xaml
@@ -5,6 +5,17 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="Mathenian.Views.TestPage">
     <StackLayout BackgroundColor="{Binding Theme.BackgroundColor}">
+        <StackLayout Orientation="Horizontal"
+                     HorizontalOptions="FillAndExpand">
+            <Label Text="{Binding Title}"
+                   FontSize="Small"
+                   TextColor="{Binding Theme.TextColor}"
+                   HorizontalOptions="StartAndExpand"/>
+            <Button Text="Quit"
+                    Command="{Binding QuitCommand}"
+                    WidthRequest="60"
+                    HorizontalOptions="End"/>
+        </StackLayout>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
